css/04-gallery.css
/* Header and Navigation Bar */

#header-module .navbar {
  border-radius: 0px;
  margin-bottom: 0px;
  border: 0px;
}

#header-module .navbar-inverse {
  background-color: #363636;
}

#header-module .col-md-8 {
  background-color: #363636;
}

#header-module .navbar .active {
  color: #ffffff;
  font-weight: bold;
  border-bottom: 3px solid #ffffff;
}

#header-module .logo {
  background: url("../assets/logo_160.png") no-repeat 0 -40px;
  height: 69px;
  width: 160px;
  float: right;
}

.navbar-nav {
  color: #919191;
}

/* Image Gallery */

/*---image gallery---*/

#row-gallery {
  padding: 0 0 10px 120px;
}

.row-gallery h1 {
  color: #464646;
  font-size: 42px;
}

.row-image-button {
  padding: 0 0 10px 15px;
}
#image-button {
  padding: 0 0 15px 0px;
}

#right-button {
  float: right;
  margin-right: 50px;

}
.btn-basic-right {
  align: right;
}

.row-gallery-1 .col-md-2 {
  width: 250px;
  height:250px;
}

.blank-img {
  margin-top: -120px;
  margin-left: 82px;
}

.btn-gold {
  color: #c0a878;
  border: 1px sold #c0a878;
}
/* Gallery Banner */
.about-us-back {
  padding: 0.20%;
  background: #313131;

}

.about-us-desc {
  font-family: Times;
}

.black-space {
  height: 100px;
}

h1 {
  color: #c0a878;
  padding: 0.20%;
  margin: 40px;
  font-size: 30px;
}

.left-title {
  font-size: 24px;
}

.text-right {
  color: #bebebe;
  padding: 0.20%;
  margin: 40px;
  font-size: 14px;
}

.blank-img {
  margin-top: -120px;
  margin-left: 82px;
}

.spacing {
  height: 100px;
}

.image-center {
  border: 1px solid white;
  margin-left: 400px;
}

.black-space-products {
  color: #222;
  height: 150px;
}

